--- a/_config.yml
+++ b/_config.yml
@@ -168,6 +168,13 @@ defaults:
       comments: false
       share: false
       related: true
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+
 
 # Plugins
 gems:
