--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,5 @@
 # main links links
 main:
-  - title: "Projects"
-    url: /projects/
+  - title: "About"
+    url: /about/
 
-  - title: "Musings"
-    url: /musings/
