--- a/_config.yml
+++ b/_config.yml
@@ -163,7 +163,7 @@ defaults:
       type: posts
     values:
       layout: single
-      author_profile: true
+      author_profile: false
       read_time: false
       comments: false
       share: false
