--- a/_config.yml
+++ b/_config.yml
@@ -131,7 +131,6 @@ markdown_ext: "markdown,mkdown,mkdn,mkd,md"
 
 # Conversion
 markdown: kramdown
-highlighter: rouge
 lsi: false
 excerpt_separator: "\n\n"
 incremental: false
@@ -140,7 +139,8 @@ incremental: false
 # Markdown Processing
 kramdown:
   input: GFM
-  hard_wrap: false
+  syntax_highlighter: rouge
+  hard_wrap: true
   auto_ids: true
   footnote_nr: 1
   entity_output: as_char
