--- a/_config.yml
+++ b/_config.yml
@@ -140,13 +140,13 @@ incremental: false
 kramdown:
   input: GFM
   syntax_highlighter: rouge
-  hard_wrap: true
-  auto_ids: true
-  footnote_nr: 1
-  entity_output: as_char
-  toc_levels: 1..6
-  smart_quotes: lsquo,rsquo,ldquo,rdquo
-  enable_coderay: false
+  #hard_wrap: true
+  #auto_ids: true
+  #footnote_nr: 1
+  #entity_output: as_char
+  #toc_levels: 1..6
+  #smart_quotes: lsquo,rsquo,ldquo,rdquo
+  #enable_coderay: false
 
 
 # Outputting
