--- a/_config.yml
+++ b/_config.yml
@@ -131,7 +131,7 @@ markdown_ext: "markdown,mkdown,mkdn,mkd,md"
 
 # Conversion
 markdown: kramdown
-highlighter: rogue
+highlighter: rouge
 lsi: false
 excerpt_separator: "\n\n"
 incremental: false
