--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,7 @@ google_ad_slot           :
 author:
   name             : "Brian Holligan"
   avatar           : "bio-photo.jpg"
-  bio              : "Pretty new to this."
+  bio              : "Embarking on a data science adventure!"
   location         : "San Francisco"
   email            : "brian.matthew.holligan@gmail.com"
   uri              :
