--- a/_config.yml
+++ b/_config.yml
@@ -77,7 +77,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/bholligan/"
+  github           : "bholligan"
   google_plus      :
   keybase          :
   instagram        :
