--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ google_ad_slot           :
 # Site Author
 author:
   name             : "Brian Holligan"
-  avatar           : "bio-photo.jpg"
+  avatar           : "bio-photo2.jpg"
   bio              : "Embarking on a data science adventure!"
   location         : "San Francisco"
   email            : "brian.matthew.holligan@gmail.com"
