--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title_separator          : "-"
 name                     : "Brian Holligan"
 description              : "A place for sharing data science projects and discoveries."
 url                      : "https://bholligan.github.io"
-baseurl                  : # the subpath of your site, e.g. "/blog"
+baseurl                  : / # the subpath of your site, e.g. "/blog"
 gh_repo                  :
 teaser                   : # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 # breadcrumbs            : false # true, false (default)
