--- a/_config.yml
+++ b/_config.yml
@@ -167,7 +167,7 @@ defaults:
       read_time: false
       comments: false
       share: false
-      related: true
+      related: false
   # _pages
   - scope:
       path: ""
